--- a/src/AppointmentSystem.Web/Pages/Home.razor
+++ b/src/AppointmentSystem.Web/Pages/Home.razor
@@ -7,6 +7,6 @@
 @code {
     protected override void OnInitialized()
     {
-        NavigationManager.NavigateTo("/appointments");
+        NavigationManager.NavigateTo("/login");
     }
 }
