--- a/src/AppointmentSystem.Web/Pages/Home.razor
+++ b/src/AppointmentSystem.Web/Pages/Home.razor
@@ -2,6 +2,8 @@
 @using Microsoft.AspNetCore.Components
 @inject NavigationManager NavigationManager
 
+// ana sayfa redirect login sayfasına yönlendiriyor
+
 <PageTitle>Randevu Sistemi</PageTitle>
 
 @code {
